Added assets and updated links.
Add recipe images and update links in recipe pages.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
   <h1>Odin Recipes</h1>
   <ul>
-    <li><a href="">Khachapuri</a></li>
-    <li><a href="">Khinkali</a></li>
-    <li><a href="">Chashushuli</a></li>
-    <li><a href="">Churchkhela</a></li>
+    <li><a href="./recipes/khachapuri.html">Khachapuri</a></li>
+    <li><a href="./recipes/khinkali.html">Khinkali</a></li>
+    <li><a href="./recipes/Chashushuli.html">Chashushuli</a></li>
+    <li><a href="./recipes/Churchkhela.html">Churchkhela</a></li>
   </ul>
 </body>
 </html>
