--- a/recipes/Chashushuli.html
+++ b/recipes/Chashushuli.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <a href="../index.html">Home</a>
-  <h1>Chashushuli</h1>  
+  <h1>Chashushuli</h1>
+  <img src="../assets/24_ostri.png" alt="" width="250">
 </body>
 </html>
