--- a/recipes/khachapuri.html
+++ b/recipes/khachapuri.html
@@ -8,5 +8,6 @@
 <body>
   <a href="../index.html">Home</a>
   <h1>Khachapuri</h1>
+  <img src="../assets/08_khacha.png" alt="" width="250">
 </body>
 </html>
