--- a/recipes/khinkali.html
+++ b/recipes/khinkali.html
@@ -8,5 +8,6 @@
 <body>
   <a href="../index.html">Home</a>
   <h1>Khinkali</h1>
+  <img src="../assets/09_busted.png" alt="" width="250">
 </body>
 </html>
