--- a/recipes/Churchkhela.html
+++ b/recipes/Churchkhela.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <a href="../index.html">Home</a>
-  <h1>Churchkhela</h1>  
+  <h1>Churchkhela</h1>
+  <img src="../assets/20_curckela.png" alt="" width="250">
 </body>
 </html>
