Embeded recipe images inside figure>figcaption tag.
Refactor recipe image sections to include captions and source links

--- a/recipes/Churchkhela.html
+++ b/recipes/Churchkhela.html
@@ -8,6 +8,12 @@
 <body>
   <a href="../index.html">Home</a>
   <h1>Churchkhela</h1>
-  <img src="../assets/20_curckela.png" alt="" width="250">
+  <figure>
+    <figcaption>
+      <img src="../assets/20_curckela.png" alt="" width="250">
+      <br>
+      Photo from <a href="https://www.caucasus-trekking.com/general/georgian-food#img29">caucasus-trekking.com</a>
+    </figcaption>
+  </figure>
 </body>
 </html>
