--- a/recipes/Chashushuli.html
+++ b/recipes/Chashushuli.html
@@ -8,6 +8,12 @@
 <body>
   <a href="../index.html">Home</a>
   <h1>Chashushuli</h1>
-  <img src="../assets/24_ostri.png" alt="" width="250">
+  <figure>
+    <figcaption>
+      <img src="../assets/24_ostri.png" alt="" width="250">
+      <br>
+      Photo from <a href="https://www.caucasus-trekking.com/general/georgian-food#img29">caucasus-trekking.com</a>
+    </figcaption>
+  </figure>
 </body>
 </html>
