Updated figcaption, description and ingredients.
Add detailed descriptions and ingredients for Georgian recipes. Updated figcaption to indicate recipe description source.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
+  <h2>GEORGIAN CUISINE</h2>
+  <p>
+    Georgians are inextricably linked with food. OK, I reading it now, I see that this statement is valid for each nation. Still, it can't be denied that the <strong>food plays in the Georgian culture a very important role.</strong> The feast is not just a pretext to stuff one´s belly but mainly a social event and a kind of a ritual with a special set of rules (which I won't elaborate on here, a lot has been written about them already).
+  </p>
+  <p>
+    Apart from that, <strong>traditional Georgian food is quite "heavy",</strong> it uses lots of meat, cheese, and leavened dough. That is balanced by vegetable salads, which are often eaten as side dishes. For the seasoning is used (except of the omnipresent walnuts) mostly garlic and also herbs such as coriander, tarragon or dill.
+  </p>
+
+  <p>Follow links below for recipe details:</p>
   <ul>
     <li><a href="./recipes/khachapuri.html">Khachapuri</a></li>
     <li><a href="./recipes/khinkali.html">Khinkali</a></li>
