--- a/recipes/Churchkhela.html
+++ b/recipes/Churchkhela.html
@@ -10,10 +10,32 @@
   <h1>Churchkhela</h1>
   <figure>
     <figcaption>
-      <img src="../assets/20_curckela.png" alt="" width="250">
+      <img src="../assets/20_curckela.png" alt="" width="450">
       <br>
-      Photo from <a href="https://www.caucasus-trekking.com/general/georgian-food#img29">caucasus-trekking.com</a>
+      Photos and description are from <a href="https://www.caucasus-trekking.com/general/georgian-food#img29">caucasus-trekking.com</a>
     </figcaption>
   </figure>
+  <p><em>Churchkhela</em> is a traditional Georgian sweet with a shape resembling that of an overgrown pea pod. It's made of nuts put on a string and repeatedly dipped in a mix of grape juice, flour, and honey. The most common are <em>churchkhela</em>s made of walnuts but sometimes are used also hazelnuts, almonds or para nuts. <em>Churchkhela</em> doesn´t have a too striking taste but since it´s light, durable and nutritious, it´s worth it to take a few pieces to the mountain treks - it´s no coincidence that it´s called "Georgian Snickers". After all, it was a favorite meal of Georgian warriors riding into battles. And it's also a very popular souvenir.</p>
+  <h2>Ingredients</h2>
+  <ul>
+    <li>Grape juice (or wine, traditionally) </li>
+    <li>Walnuts (whole or halves)</li>
+    <li>Sugar</li>
+    <li>Flour (optional, for thickening)</li>
+    <li>Cornstarch (optional, for thickening)</li>
+    <li>Honey (optional, for sweetness)</li>
+    <li>Salt (optional, for flavor balance)</li>
+  </ul>
+  <h2>Steps</h2>
+  <ol>
+    <li>In a large pot, bring the grape juice (or wine) to a boil, then reduce heat to a simmer.</li>
+    <li>Mix in sugar, stirring until completely dissolved. You can also add honey or salt at this stage for flavor adjustments.</li>
+    <li>If you want a thicker coating, mix some flour or cornstarch with a bit of cold water, then slowly add it to the simmering juice while stirring to avoid lumps.</li>
+    <li>Continue to cook the mixture, stirring constantly, until it thickens to a syrupy consistency (about 15-20 minutes).</li>
+    <li>While the mixture thickens, prepare your walnuts. Thread them onto strings, tying knots between each nut to create a chain (this is the base for your <em>Churchkhela</em>). You can also alternate with other dried fruits, if desired.</li>
+    <li>Once the syrup is thick enough, dip each walnut chain into the syrup, making sure to coat each piece thoroughly.</li>
+    <li>Hang the dipped walnut strings to dry in a cool, dry place for several hours or overnight. You can hang them on a clothesline or a rod to let them drip and set.</li>
+    <li>After they've dried and firmed up, they'll be ready to eat! <em>Churchkhela</em> can be kept for weeks, stored in a cool, dry place.</li>
+  </ol>
 </body>
 </html>
