Refactor recipe pages. Used semantic html instead. Added main CSS styles for improved layout and readability.

--- a/index.html
+++ b/index.html
@@ -3,24 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Odin Recipes - Georgian Cuisine</title>
+  <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
-  <h1>Odin Recipes</h1>
-  <h2>GEORGIAN CUISINE</h2>
-  <p>
-    Georgians are inextricably linked with food. OK, I reading it now, I see that this statement is valid for each nation. Still, it can't be denied that the <strong>food plays in the Georgian culture a very important role.</strong> The feast is not just a pretext to stuff one´s belly but mainly a social event and a kind of a ritual with a special set of rules (which I won't elaborate on here, a lot has been written about them already).
-  </p>
-  <p>
-    Apart from that, <strong>traditional Georgian food is quite "heavy",</strong> it uses lots of meat, cheese, and leavened dough. That is balanced by vegetable salads, which are often eaten as side dishes. For the seasoning is used (except of the omnipresent walnuts) mostly garlic and also herbs such as coriander, tarragon or dill.
-  </p>
+  <main class="container">
+    <header>
+      <h1>Odin Recipes</h1>
+      <h2>GEORGIAN CUISINE</h2>
+    </header>
 
-  <p>Follow links below for recipe details:</p>
-  <ul>
-    <li><a href="./recipes/khachapuri.html">Khachapuri</a></li>
-    <li><a href="./recipes/khinkali.html">Khinkali</a></li>
-    <li><a href="./recipes/Chashushuli.html">Chashushuli</a></li>
-    <li><a href="./recipes/Churchkhela.html">Churchkhela</a></li>
-  </ul>
+    <article>
+      <section>
+        <p>
+          Georgians are inextricably linked with food. OK, I reading it now, I see that this statement is valid for each nation. Still, it can't be denied that the <strong>food plays in the Georgian culture a very important role.</strong> The feast is not just a pretext to stuff one´s belly but mainly a social event and a kind of a ritual with a special set of rules (which I won't elaborate on here, a lot has been written about them already).
+        </p>
+        <p>
+          Apart from that, <strong>traditional Georgian food is quite "heavy",</strong> it uses lots of meat, cheese, and leavened dough. That is balanced by vegetable salads, which are often eaten as side dishes. For the seasoning is used (except of the omnipresent walnuts) mostly garlic and also herbs such as coriander, tarragon or dill.
+        </p>
+      </section>
+
+      <section>
+        <p>Follow links below for recipe details:</p>
+        <nav aria-label="Recipe navigation">
+          <ul>
+            <li><a href="./recipes/khachapuri.html">Khachapuri</a></li>
+            <li><a href="./recipes/khinkali.html">Khinkali</a></li>
+            <li><a href="./recipes/Chashushuli.html">Chashushuli</a></li>
+            <li><a href="./recipes/Churchkhela.html">Churchkhela</a></li>
+          </ul>
+        </nav>
+      </section>
+    </article>
+  </main>
 </body>
 </html>
