--- a/recipes/Chashushuli.html
+++ b/recipes/Chashushuli.html
@@ -3,47 +3,66 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Chashushuli Recipe - Georgian Beef Stew</title>
+  <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
-  <a href="../index.html">Home</a>
-  <h1>Chashushuli</h1>
-  <figure>
-    <figcaption>
-      <img src="../assets/24_ostri.png" alt="" width="450">
-      <br>
-      PPhotos and description are from <a href="https://www.caucasus-trekking.com/general/georgian-food#img29">caucasus-trekking.com</a>
-    </figcaption>
-  </figure>
-  <p>Ostri is another typical Georgian food - a spicy beef stew resembling an European goulash. The beef is cooked together with tomatoes and mushrooms and further flavored with generous amount of garlic, spices and herbs. It´s a hearty, filling dish ideal for chilly evenings.
-On some restaurant menus, you will find also a similar dish named <em>chashushuli</em>. As a culinary layman, they both looked same to me. Only later, a friend explained me the difference. During the preparation of ostri, ingredients are cooked together from the beginning. But in case of <em>chashushuli</em>, the meat is first briefly fried and then cooked in its own oil - tomatoes and mushrooms are added only much later.</p>
-  <h2>Ingredients</h2>
-  <ul>
-    <li>Beef (usually stewing cuts like chuck or brisket)</li>
-    <li>Onion</li>
-    <li>Garlic</li>
-    <li>Tomatoes (or tomato paste)</li>
-    <li>Bell pepper (optional)</li>
-    <li>Carrot (optional)</li>
-    <li>Bay leaves</li>
-    <li>Fresh parsley or cilantro</li>
-    <li>Olive oil (or any cooking oil)</li>
-    <li>Salt and pepper</li>
-    <li>Red wine (optional)</li>
-    <li>Water or broth</li>
-  </ul>
-  <h2>Steps</h2>
-  <ol>
-    <li>Heat oil in a large pot or skillet over medium heat.</li>
-    <li>Brown the beef pieces on all sides. Remove and set aside.</li>
-    <li>In the same pot, sauté chopped onions until softened.</li>
-    <li>Add minced garlic and sauté for another minute.</li>
-    <li>Add chopped tomatoes (or tomato paste) and cook for 5-7 minutes.</li>
-    <li>Return the browned beef to the pot.</li>
-    <li>Add bay leaves, salt, and pepper. If using, pour in red wine.</li>
-    <li>Cover with water or broth, bring to a boil, then reduce heat to low and simmer for 1.5-2 hours until beef is tender.</li>
-    <li>Optional: Add carrots or bell pepper during the last 30 minutes of cooking.</li>
-    <li>Garnish with fresh parsley or cilantro before serving.</li>
-  </ol>
+  <nav aria-label="Breadcrumb">
+    <a href="../index.html">Home</a>
+  </nav>
+
+  <main>
+    <article>
+      <header>
+        <h1>Chashushuli</h1>
+      </header>
+
+      <figure>
+        <img src="../assets/24_ostri.png" alt="Georgian Chashushuli beef stew in a traditional pot" width="450">
+        <figcaption>
+          Photos and description are from <a href="https://www.caucasus-trekking.com/general/georgian-food#img29">caucasus-trekking.com</a>
+        </figcaption>
+      </figure>
+
+      <section>
+        <p>Ostri is another typical Georgian food - a spicy beef stew resembling an European goulash. The beef is cooked together with tomatoes and mushrooms and further flavored with generous amount of garlic, spices and herbs. It´s a hearty, filling dish ideal for chilly evenings.</p>
+        <p>On some restaurant menus, you will find also a similar dish named <em>chashushuli</em>. As a culinary layman, they both looked same to me. Only later, a friend explained me the difference. During the preparation of ostri, ingredients are cooked together from the beginning. But in case of <em>chashushuli</em>, the meat is first briefly fried and then cooked in its own oil - tomatoes and mushrooms are added only much later.</p>
+      </section>
+
+      <section>
+        <h2>Ingredients</h2>
+        <ul>
+          <li>Beef (usually stewing cuts like chuck or brisket)</li>
+          <li>Onion</li>
+          <li>Garlic</li>
+          <li>Tomatoes (or tomato paste)</li>
+          <li>Bell pepper (optional)</li>
+          <li>Carrot (optional)</li>
+          <li>Bay leaves</li>
+          <li>Fresh parsley or cilantro</li>
+          <li>Olive oil (or any cooking oil)</li>
+          <li>Salt and pepper</li>
+          <li>Red wine (optional)</li>
+          <li>Water or broth</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Steps</h2>
+        <ol>
+          <li>Heat oil in a large pot or skillet over medium heat.</li>
+          <li>Brown the beef pieces on all sides. Remove and set aside.</li>
+          <li>In the same pot, sauté chopped onions until softened.</li>
+          <li>Add minced garlic and sauté for another minute.</li>
+          <li>Add chopped tomatoes (or tomato paste) and cook for 5-7 minutes.</li>
+          <li>Return the browned beef to the pot.</li>
+          <li>Add bay leaves, salt, and pepper. If using, pour in red wine.</li>
+          <li>Cover with water or broth, bring to a boil, then reduce heat to low and simmer for 1.5-2 hours until beef is tender.</li>
+          <li>Optional: Add carrots or bell pepper during the last 30 minutes of cooking.</li>
+          <li>Garnish with fresh parsley or cilantro before serving.</li>
+        </ol>
+      </section>
+    </article>
+  </main>
 </body>
 </html>
