--- a/recipes/khachapuri.html
+++ b/recipes/khachapuri.html
@@ -3,46 +3,64 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Khachapuri Recipe - Georgian Cheesy Bread</title>
+  <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
-  <a href="../index.html">Home</a>
-  <h1>Khachapuri</h1>
-  <figure>
-    <figcaption>
-      <img src="../assets/08_khacha.png" alt="" width="450">
-      <br>
-      Photos and description are from <a href="https://www.caucasus-trekking.com/general/georgian-food#img29">caucasus-trekking.com</a>
-    </figcaption>
-  </figure>
-  <p>Probably the most traditional Georgian dish. Translated, it means "cheesy bread" and these two words sum it all up. It is a flatbread made of leavened dough, filled with cheese. Available in restaurants as well as a street food and tastes really well - the dough is often oily and pleasantly crunchy, cheese (usually cow "sulguni") is smooth and salty.
-It seems that almost every Georgian region has its local variant of <em>khachapuri</em> - the one described above is the basic one, coming from Imereti (<em>Khachapuri</em> Imeruli). We also know Megrelian "<em>Khachapuri</em> Megruli" which has the cheese not only inside but also on the top. Famous is the Adjarian variant (Acharuli <em>Khachapuri</em>) which resembles a boat with an egg yolk, cube of butter and lots of cheese floating inside. Solid calorie bomb.
-Another variant is kubdari coming from Svaneti - this one is smaller, thicker and stuffed with minced meat with herbs. Very popular is also lobiani coming from Racha, which is stuffed with a paste made of kidney beans, usually flavored by herbs, fat or pieces of bacon.</p>
-  <h2>Ingredients</h2>
-  <ul>
-    <li>All-purpose flour</li>
-    <li>Warm water</li>
-    <li>Active dry yeast</li>
-    <li>Sugar</li>
-    <li>Salt</li>
-    <li>Olive oil</li>
-    <li>Eggs</li>
-    <li>Feta cheese (or a mix of feta and mozzarella)</li>
-    <li>Butter</li>
-    <li>Milk (optional, for dough softness)</li>
-  </ul>
-  <h2>Steps</h2>
-  <ol>
-    <li>In a bowl, dissolve yeast and sugar in warm water. Let it sit for 5-10 minutes until frothy.</li>
-    <li>In another bowl, combine flour and salt. Gradually add the yeast mixture and olive oil to form a dough.</li>
-    <li>Knead the dough for about 10 minutes until smooth and elastic. Cover and let it rise for 1–1.5 hours, or until doubled in size.</li>
-    <li>Meanwhile, prepare the filling by mixing crumbled feta and shredded mozzarella in a bowl.</li>
-    <li>Preheat the oven to 475°F (245°C) and line a baking sheet with parchment paper.</li>
-    <li>Once the dough has risen, divide it into portions and roll each portion into a circle (about 8-10 inches in diameter).</li>
-    <li>Place a generous amount of cheese filling in the center of each circle and fold the edges up to create a boat shape.</li>
-    <li>Place the filled dough on the baking sheet and bake for 12-15 minutes, or until golden and the cheese is melted.</li>
-    <li>After baking, carefully crack an egg in the center of each <em>khachapuri</em> and return to the oven for an additional 3-5 minutes, until the egg is cooked to your liking.</li>
-    <li>Brush with butter before serving for extra richness.</li>
-  </ol>
+  <nav aria-label="Breadcrumb">
+    <a href="../index.html">Home</a>
+  </nav>
+
+  <main>
+    <article>
+      <header>
+        <h1>Khachapuri</h1>
+      </header>
+
+      <figure>
+        <img src="../assets/08_khacha.png" alt="Traditional Georgian Khachapuri" width="450">
+        <figcaption>
+          Photos and description are from <a href="https://www.caucasus-trekking.com/general/georgian-food#img29">caucasus-trekking.com</a>
+        </figcaption>
+      </figure>
+
+      <section>
+        <p>Probably the most traditional Georgian dish. Translated, it means "cheesy bread" and these two words sum it all up. It is a flatbread made of leavened dough, filled with cheese. Available in restaurants as well as a street food and tastes really well - the dough is often oily and pleasantly crunchy, cheese (usually cow "sulguni") is smooth and salty.</p>
+        <p>It seems that almost every Georgian region has its local variant of <em>khachapuri</em> - the one described above is the basic one, coming from Imereti (<em>Khachapuri</em> Imeruli). We also know Megrelian "<em>Khachapuri</em> Megruli" which has the cheese not only inside but also on the top. Famous is the Adjarian variant (Acharuli <em>Khachapuri</em>) which resembles a boat with an egg yolk, cube of butter and lots of cheese floating inside. Solid calorie bomb. Another variant is kubdari coming from Svaneti - this one is smaller, thicker and stuffed with minced meat with herbs. Very popular is also lobiani coming from Racha, which is stuffed with a paste made of kidney beans, usually flavored by herbs, fat or pieces of bacon.</p>
+      </section>
+
+      <section>
+        <h2>Ingredients</h2>
+        <ul>
+          <li>All-purpose flour</li>
+          <li>Warm water</li>
+          <li>Active dry yeast</li>
+          <li>Sugar</li>
+          <li>Salt</li>
+          <li>Olive oil</li>
+          <li>Eggs</li>
+          <li>Feta cheese (or a mix of feta and mozzarella)</li>
+          <li>Butter</li>
+          <li>Milk (optional, for dough softness)</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Steps</h2>
+        <ol>
+          <li>In a bowl, dissolve yeast and sugar in warm water. Let it sit for 5-10 minutes until frothy.</li>
+          <li>In another bowl, combine flour and salt. Gradually add the yeast mixture and olive oil to form a dough.</li>
+          <li>Knead the dough for about 10 minutes until smooth and elastic. Cover and let it rise for 1–1.5 hours, or until doubled in size.</li>
+          <li>Meanwhile, prepare the filling by mixing crumbled feta and shredded mozzarella in a bowl.</li>
+          <li>Preheat the oven to 475°F (245°C) and line a baking sheet with parchment paper.</li>
+          <li>Once the dough has risen, divide it into portions and roll each portion into a circle (about 8-10 inches in diameter).</li>
+          <li>Place a generous amount of cheese filling in the center of each circle and fold the edges up to create a boat shape.</li>
+          <li>Place the filled dough on the baking sheet and bake for 12-15 minutes, or until golden and the cheese is melted.</li>
+          <li>After baking, carefully crack an egg in the center of each <em>khachapuri</em> and return to the oven for an additional 3-5 minutes, until the egg is cooked to your liking.</li>
+          <li>Brush with butter before serving for extra richness.</li>
+        </ol>
+      </section>
+    </article>
+  </main>
 </body>
 </html>
