--- a/recipes/khinkali.html
+++ b/recipes/khinkali.html
@@ -3,44 +3,63 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Khinkali Recipe - Georgian Dumplings</title>
+  <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
-  <a href="../index.html">Home</a>
-  <h1>Khinkali</h1>
-  <figure>
-    <figcaption>
-      <img src="../assets/09_busted.png" alt="" width="450">
-      <br>
-      Photos and description are from <a href="https://www.caucasus-trekking.com/general/georgian-food#img29">caucasus-trekking.com</a>
-    </figcaption>
-  </figure>
-  <p>Another traditional dish is <em>khinkali</em>. These are the dumplings stuffed with meat, potatoes, mushrooms or cheese. They can be bought virtually everywhere, but according to the general consensus, the best ones are made at their place of origin - valleys lying by the Georgian Military Highway.
-Consumption of <em>khinkali</em> has its own set of rules - tourists usually violate all of them almost immediately and learn the proper way only when the locals sitting nearby can´t bear watching it anymore (that´s my case, too). You should take them from a plate with your hands, use of cutlery is considered rude. Georgians grab the dumpling by the top (called kudi), turn around and sprinkle it with pepper. Then they carefully bite into it, suck the juice and only then they start eating. The upper part is not for eating - they are discarded to the edge of the plate so everybody can see who ate the most. But I am not sure if its purpose is to guarantee that everyone gets his fair share or it's good only for bragging.</p>
-  <h2>Ingredients</h2>
-  <ul>
-    <li>All-purpose flour</li>
-    <li>Water</li>
-    <li>Salt</li>
-    <li>Ground beef or beef-pork mix</li>
-    <li>Onion</li>
-    <li>Garlic (optional)</li>
-    <li>Black pepper</li>
-    <li>Cumin (optional)</li>
-    <li>Water or broth (for the filling)</li>
-  </ul>
-  <h2>Steps</h2>
-  <ol>
-    <li>In a bowl, mix flour, salt, and water to form a firm dough.</li>
-    <li>Knead the dough until smooth, cover, and let it rest for 30 minutes.</li>
-    <li>In another bowl, combine ground meat, finely chopped onion, salt, pepper, and optional spices.</li>
-    <li>Gradually mix in water or broth until the filling is juicy.</li>
-    <li>Roll out the dough thin and cut into circles.</li>
-    <li>Place filling in the center of each dough circle.</li>
-    <li>Fold the edges up into pleats and pinch the top to seal.</li>
-    <li>Boil salted water and gently add the <em>khinkali</em>.</li>
-    <li>Cook until they float and continue boiling for a few more minutes.</li>
-    <li>Remove, drain, and serve hot.</li>
-  </ol>
+  <nav aria-label="Breadcrumb">
+    <a href="../index.html">Home</a>
+  </nav>
+
+  <main class="container">
+    <article>
+      <header>
+        <h1>Khinkali</h1>
+      </header>
+
+      <figure>
+        <img src="../assets/09_busted.png" alt="Traditional Georgian Khinkali dumplings" width="450">
+        <figcaption>
+          Photos and description are from <a href="https://www.caucasus-trekking.com/general/georgian-food#img29">caucasus-trekking.com</a>
+        </figcaption>
+      </figure>
+
+      <section>
+        <p>Another traditional dish is <em>khinkali</em>. These are the dumplings stuffed with meat, potatoes, mushrooms or cheese. They can be bought virtually everywhere, but according to the general consensus, the best ones are made at their place of origin - valleys lying by the Georgian Military Highway.</p>
+        <p>Consumption of <em>khinkali</em> has its own set of rules - tourists usually violate all of them almost immediately and learn the proper way only when the locals sitting nearby can´t bear watching it anymore (that´s my case, too). You should take them from a plate with your hands, use of cutlery is considered rude. Georgians grab the dumpling by the top (called kudi), turn around and sprinkle it with pepper. Then they carefully bite into it, suck the juice and only then they start eating. The upper part is not for eating - they are discarded to the edge of the plate so everybody can see who ate the most. But I am not sure if its purpose is to guarantee that everyone gets his fair share or it's good only for bragging.</p>
+      </section>
+
+      <section>
+        <h2>Ingredients</h2>
+        <ul>
+          <li>All-purpose flour</li>
+          <li>Water</li>
+          <li>Salt</li>
+          <li>Ground beef or beef-pork mix</li>
+          <li>Onion</li>
+          <li>Garlic (optional)</li>
+          <li>Black pepper</li>
+          <li>Cumin (optional)</li>
+          <li>Water or broth (for the filling)</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Steps</h2>
+        <ol>
+          <li>In a bowl, mix flour, salt, and water to form a firm dough.</li>
+          <li>Knead the dough until smooth, cover, and let it rest for 30 minutes.</li>
+          <li>In another bowl, combine ground meat, finely chopped onion, salt, pepper, and optional spices.</li>
+          <li>Gradually mix in water or broth until the filling is juicy.</li>
+          <li>Roll out the dough thin and cut into circles.</li>
+          <li>Place filling in the center of each dough circle.</li>
+          <li>Fold the edges up into pleats and pinch the top to seal.</li>
+          <li>Boil salted water and gently add the <em>khinkali</em>.</li>
+          <li>Cook until they float and continue boiling for a few more minutes.</li>
+          <li>Remove, drain, and serve hot.</li>
+        </ol>
+      </section>
+    </article>
+  </main>
 </body>
 </html>
